# python-starter-template

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  renovate.json
.github/workflows/: cd.yml  ci.yml  pipeline.yml  publish.yml  release.yml  renovate.yml
src/project/: config.py  main.py
tests/: test_main.py
